--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-VITE_TIKTOK_CLIENT_KEY=your_client_key
-VITE_TIKTOK_REDIRECT_URI=http://localhost:5173/auth/callback
+# VITE_TIKTOK_CLIENT_KEY=your_client_key
+# VITE_TIKTOK_REDIRECT_URI=http://localhost:5173/auth/callback
+# VITE_TIKTOK_APP_ID=your_app_id_here
+VITE_TIKTOK_APP_ID=7234567890123456 
+VITE_TIKTOK_APP_SECRET=your_secret_here
+VITE_REDIRECT_URI=http://localhost:5173/auth/callback
+VITE_API_BASE_URL=https://business-api.tiktok.com
+VITE_API_MODE=mock
