--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
-# VITE_TIKTOK_CLIENT_KEY=your_client_key
-# VITE_TIKTOK_REDIRECT_URI=http://localhost:5173/auth/callback
-# VITE_TIKTOK_APP_ID=your_app_id_here
-VITE_TIKTOK_APP_ID=7234567890123456 
-VITE_TIKTOK_APP_SECRET=your_secret_here
+# TikTok App Credentials (from Developer Portal)
+VITE_TIKTOK_APP_ID=sbawcqsfuoucdu2407
+VITE_TIKTOK_APP_SECRET=89GAQu76Ww8vOpuQl4FVmRg0F9kntOYR
+
+# OAuth Redirect URI
 VITE_REDIRECT_URI=http://localhost:5173/auth/callback
+
+# TikTok API Base URL
 VITE_API_BASE_URL=https://business-api.tiktok.com
-VITE_API_MODE=mock
+
+# API Mode: 'real' for actual TikTok API, 'mock' for testing
+VITE_API_MODE=real
